--- a/hybrid-compact.conf
+++ b/hybrid-compact.conf
@@ -48,8 +48,8 @@ conky.config = {
 
     color2 = '4285F4',
 
-    lua_load = '~/.config/conky/hybrid-compact/lua/hybrid-rings.lua',
-	lua_draw_hook_pre = 'conky_main true'
+    lua_load = '~/.config/conky/hybrid-compact/lua/hybrid-compact-rings.lua',
+	lua_draw_hook_pre = 'conky_main false'
 };
 
 conky.text = [[
@@ -58,7 +58,7 @@ conky.text = [[
 ${voffset}
 ${goto 300}${color2}${font Play:bold:size=16}${alignc}${execi 300 lsb_release -d | cut -c14-} ${color}
 ${goto 300}${voffset}${font Play:bold:size=10}${alignc}${execi 300 lsb_release -c | cut -c11-} ${execi 300 lsb_release -r | cut -c9-}
-${goto 300}${font Play:size=10}${alignc}${time %A %d %b %Y}
+${goto 300}${font Play:size=10}${alignc}${time %A %d %b %Y %H:%M:%S}
 
 ${goto 300}${color2}${alignc}${font Play:bold:size=9}SYSTEM ${color}
 ${goto 300}${font Play:style=Bold:size=9}Name ${font Play:size=9}${alignr}${sysname} kernel ${kernel}
