Adding some modification that helps me and others

--- a/hybrid-compact.conf
+++ b/hybrid-compact.conf
@@ -1,5 +1,5 @@
 conky.config = {
-    background = false,
+    background = true,
     use_xft = true,
     xftalpha = 0.8,
     update_interval = 2.0,
@@ -8,16 +8,17 @@ conky.config = {
 
     own_window_class = 'Conky',
     own_window = true,
-    own_window_type = 'normal',
-    own_window_transparent = true,
+    own_window_type = 'dock',
+    own_window_transparent = false,
     own_window_argb_visual = true,
-    own_window_argb_value = 0,
+    own_window_argb_value = 200,
+    own_window_colour = '#181818',
     own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 
     alignment = 'top_right',
 
     double_buffer = true,
-    minimum_width = 530,
+    minimum_width = 370,
     minimum_height = 720,
 
     draw_shades = false,
@@ -35,7 +36,7 @@ conky.config = {
     no_buffers = true,
     uppercase = false,
     
-    cpu_avg_samples = 12,
+    cpu_avg_samples = 8,
     net_avg_samples = 2,
     
     use_spacer = 'none',
@@ -46,58 +47,69 @@ conky.config = {
     default_shade_color = 'darkgray',
     default_outline_color = 'darkgray',
 
-    color2 = '3458eb',
+    color2 = 'ff5200',
+
+
 
     lua_load = '~/.config/conky/hybrid-compact/lua/hybrid-compact-rings.lua',
-	lua_draw_hook_pre = 'conky_main false'
+    lua_draw_hook_pre = 'conky_main false'
+	
 };
-
 conky.text = [[
 ########################################## left panel
 ########################################## right panel
 ${voffset}
-${goto 300}${color2}${font NotoSans:bold:size=16}${alignc}${execi 300 lsb_release -d | cut -c14-} ${color}
-${goto 300}${voffset}${font NotoSans:bold:size=10}${alignc}${execi 300 lsb_release -c | cut -c11-} ${execi 300 lsb_release -r | cut -c9-}
-${goto 300}${font NotoSans:size=10}${alignc}${time %A %d %b %Y}
+${goto 0}${color2}${font NotoSans:bold:size=16}${alignc}${execi 300 lsb_release -d | cut -c14-} ${color}
+${goto 0}${voffset}${font NotoSans:bold:size=10}${alignc}${execi 300 lsb_release -c | cut -c11-} ${execi 0 lsb_release -r | cut -c9-}
+${goto 0}${font NotoSans:size=10}${alignc}${time %A %d %b %Y}
 
-${goto 300}${color2}${alignc}${font NotoSans:bold:size=9}SYSTEM ${color}
-${goto 300}${font NotoSans:style=Bold:size=9}Name ${font NotoSans:size=9}${alignr}${sysname} kernel ${kernel}
-${goto 300}${font NotoSans:style=Bold:size=9}RAM ${font NotoSans:size=9}${alignr}${mem} / ${memmax}
-${goto 300}${font NotoSans:style=Bold:size=9}SWAP ${font NotoSans:size=9}${alignr}${swap} / ${swapmax}
-${goto 300}${font NotoSans:style=Bold:size=9}Uptime ${font NotoSans:size=9}${alignr}${uptime_short}
+${goto 10}${color2}${alignc}${font NotoSans:bold:size=13}SYSTEM ${color}
+${goto 10}${font NotoSans:style=Bold:size=11}Name ${font NotoSans:size=9}${alignr}${sysname} kernel ${kernel}
+${goto 10}${font NotoSans:style=Bold:size=11}RAM ${font NotoSans:size=9}${alignr}${mem} / ${memmax}
+${goto 10}${font NotoSans:style=Bold:size=11}SWAP ${font NotoSans:size=9}${alignr}${swap} / ${swapmax}
+${goto 10}${font NotoSans:style=Bold:size=11}Uptime ${font NotoSans:size=9}${alignr}${uptime_short}
 
-${goto 300}${color2}${alignc}${font NotoSans:bold:size=9}DISK ${color}
-${goto 300}${font NotoSans:style=Bold:size=9}/ ${font NotoSans:size=9}${alignr}${fs_used /} / ${fs_size /}
-${goto 300}${font NotoSans:style=Bold:size=9}/opt ${font NotoSans:size=9}${alignr}${fs_used /opt} / ${fs_size /opt}
-${goto 300}${font NotoSans:style=Bold:size=9}/usr ${font NotoSans:size=9}${alignr}${fs_used /usr} / ${fs_size /usr}
-${goto 300}${font NotoSans:style=Bold:size=9}/home ${font NotoSans:size=9}${alignr}${fs_used /home} / ${fs_size /home}
+#${goto 0}${color2}${alignc}${font NotoSans:bold:size=13}DISK ${color}
+#${goto 0}${font NotoSans:style=Bold:size=11}/ ${font NotoSans:size=9}${alignr}${fs_used /} / ${fs_size /}
+#${goto 0}${font NotoSans:style=Bold:size=11}/opt ${font NotoSans:size=9}${alignr}${fs_used /opt} / ${fs_size /opt}
+#${goto 0}${font NotoSans:style=Bold:size=11}/usr ${font NotoSans:size=9}${alignr}${fs_used /usr} / ${fs_size /usr}
+#${goto 0}${font NotoSans:style=Bold:size=11}/home ${font NotoSans:size=9}${alignr}${fs_used /home} / ${fs_size /home}
 
-${goto 300}${color2}${alignc}${font NotoSans:bold:size=9}NETWORK ${color}
-# ${font NotoSans:style=Bold:size=9}External IP ${font NotoSans:size=9}${alignr}${execi 14400 wget http://canyouseeme.org/ -O - 2>/dev/null | awk '/name="IP"/{if (gsub(/[^0-9.]+/,"")) {print}} '}
-${if_existing /proc/net/route enp7s0f1}\
-${goto 300}${font NotoSans:style=Bold:size=9}Internal IP - enp7s0f1 ${font NotoSans:size=9}${alignr}${addr enp7s0f1}
-${goto 300}    ${font NotoSans:style=Bold:size=9}Download
-${goto 300}        ${color2}${font NotoSans:size=9}Speed ${alignr} ${downspeed enp7s0f1}
-${goto 300}        ${color}Total ${alignr} ${totaldown enp7s0f1}
-${goto 300}    ${font NotoSans:style=Bold:size=9}Upload
-${goto 300}        ${color2}${font NotoSans:size=9}Speed ${alignr} ${upspeed enp7s0f1}
-${goto 300}        ${color}Total ${alignr} ${totalup enp7s0f1}
-${endif}\
-${if_existing /proc/net/route wlp0s20f3}\
-${goto 300}${font NotoSans:style=Bold:size=9}Internal IP - wlp0s20f3 ${font NotoSans:size=9}${alignr}${addr wlp0s20f3}
-${goto 300}    ${font NotoSans:style=Bold:size=9}Download
-${goto 300}        ${color2}${font NotoSans:size=9}Speed ${alignr} ${downspeed wlp0s20f3}
-${goto 300}        ${color}Total ${alignr} ${totaldown wlp0s20f3}
-${goto 300}    ${font NotoSans:style=Bold:size=9}Upload
-${goto 300}        ${color2}${font NotoSans:size=9}Speed ${alignr} ${upspeed wlp0s20f3}
-${goto 300}        ${color}Total ${alignr} ${totalup wlp0s20f3}
-${endif}\
-\
+#${goto 0}${color2}${alignc}${font NotoSans:bold:size=13}PROCESSES ${color}
+#${goto 0}${font NotoSans:style=Bold:size=11}Name ${alignr}  PID      CPU    MEM
+#${goto 0}${font NotoSans:size=9}${top name 1} ${alignr}  ${top pid 1}    ${top cpu 1}    ${top mem 1}
+#${goto 0}${top name 2} ${alignr}  ${top pid 2}    ${top cpu 2}    ${top mem 2}
+#${goto 0}${top name 3} ${alignr}  ${top pid 3}    ${top cpu 3}    ${top mem 3}
+#${goto 0}${top name 4} ${alignr}  ${top pid 4}    ${top cpu 4}    ${top mem 4}
+#${goto 0}${top name 5} ${alignr}  ${top pid 5}    ${top cpu 5}    ${top mem 5}
 
-${goto 300}${color2}${alignc}${font NotoSans:bold:size=9}PROCESSES ${color}
-${goto 300}${font NotoSans:style=Bold:size=9}Name ${alignr}  PID      CPU    MEM
-${goto 300}${font NotoSans:size=9}${top name 1} ${alignr}  ${top pid 1}    ${top cpu 1}    ${top mem 1}
-${goto 300}${top name 2} ${alignr}  ${top pid 2}    ${top cpu 2}    ${top mem 2}
-${goto 300}${top name 3} ${alignr}  ${top pid 3}    ${top cpu 3}    ${top mem 3}
-${goto 300}${top name 4} ${alignr}  ${top pid 4}    ${top cpu 4}    ${top mem 4}
-${goto 300}${top name 5} ${alignr}  ${top pid 5}    ${top cpu 5}    ${top mem 5}]]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+${goto 0}${color2}${alignc}${font NotoSans:bold:size=13}SHORTCUTS ${color}
+${goto 10}${font NotoSans:style=Bold:size=11}Short ${alignr}Cut
+${goto 10}${font NotoSans:size=9}Virtual Desk 1 ${alignr} Ctrl+F1
+${goto 10}${font NotoSans:size=9}Virtual Desk 2 ${alignr} Ctrl+F2
+${goto 10}${font NotoSans:size=9}Firefox ${alignr} Home Button
+${goto 10}${font NotoSans:size=9}Send to Desk 1 ${alignr} Ctrl+Shift+1
+${goto 10}${font NotoSans:size=9}Send to Desk 2 ${alignr} Ctrl+Shift+2
+]]
+
+
+
